--- a/src/_scss/app/layout/_media-container.scss
+++ b/src/_scss/app/layout/_media-container.scss
@@ -1,7 +1,7 @@
 /*
     MEDIA-CONTAINER.CSS
 
-    - Last updated: 14.07.15
+    - Last updated: 06.08.15
     - hello@liquidvisual.com
 */
 //-----------------------------------------------------------------
@@ -25,24 +25,19 @@
 
 		@media #{$large-up} {
 			width: $symbol-width;
-			margin: rem-calc(0 $symbol-gap-width); // match space between symbols
+			padding: 0;
+			// margin: rem-calc(0 $symbol-gap-width); // match space between symbols
 		}
 
+		// *** HEIGHT SPEC ***
 		@media #{$large-up} and (min-height: 900px) {
-			padding: rem-calc(0 90%);
-		}
-
-		&:first-child {
-			// margin-left: 0; // new
+			padding: rem-calc(0 10); // create distance from top like in psd - if changed, update variables
 		}
 	}
 
-	// Special case to coincide with code above
-	.media-symbol-text {
-		@media #{$large-up} and (min-height: 900px) {
-			margin: rem-calc(0 90%);
-		}
-	}
+	//=========================================
+	// Monkey Patch - IE11
+	//=========================================
 
 	> ul > li:nth-child(4) .media-symbol .img {
 		position: relative;
@@ -50,11 +45,15 @@
 		border: 1px solid $primary-color;
 	}
 
+	//=========================================
+	// Monkey Patch - IE9-11
+	//=========================================
+
 	.media-symbol {
 		border-top: 1px solid $primary-color; // IE11 specific patch
 
 		.img {
-			width: 100%; // for IE
+			width: 100%; // for IE9-10
 			box-shadow: inset 0 0px 0px 2px $primary-color; // hack the svg rendering appearance in IE9-11
 		}
 	}
@@ -68,25 +67,56 @@
 	@include block-grid($per-row: 5);
 	margin: 0; // necessary to prevent horizontal scrollbars on mobile
 }
-//=========================================
-// Testing
-//=========================================
+
+//-----------------------------------------------------------------
+// Super Granularity for media symbol spacing
+//-----------------------------------------------------------------
 
 .media-symbol-block-grid li {
+
+	// PLUS
 	&.order-1 {
 		z-index: 5;
+
+		@media #{$large} { margin-left: $symbol-1-left-margin-large; }
+		@media #{$large-up} and (min-height: 900px) { margin-left: $symbol-1-left-margin-large-high; }
 	}
+
+	// MINUS
 	&.order-2 {
-		// z-index: 4;
-		// margin-top: -100px;
+		z-index: 4;
+		margin-top: -16%;
+
+		@media #{$small-only}, #{$medium-only} { z-index: 3; }
+		@media #{$large} { margin: 0 0 0 $symbol-2-left-margin-large; }
+		@media #{$large-up} and (min-height: 900px) { margin: 0 0 0 $symbol-2-left-margin-large-high; }
 	}
+
+	// CROSS
 	&.order-3 {
 		// z-index: 3;
+		margin-top: -26%;
+
+		@media #{$small-only}, #{$medium-only} { z-index: 4; }
+		@media #{$large} { margin: 0 0 0 $symbol-3-left-margin-large; }
+		@media #{$large-up} and (min-height: 900px) { margin: 0 0 0 $symbol-3-left-margin-large-high; }
 	}
+
+	// SLASH
 	&.order-4 {
 		// z-index: 2;
+		margin-top: -1%;
+
+		@media #{$large} { margin: 0 0 0 $symbol-4-left-margin-large; }
+		@media #{$large-up} and (min-height: 900px) { margin: 0 0 0 $symbol-4-left-margin-large-high; }
 	}
+
+	// EQUALS
 	&.order-5 {
 		// z-index: 1;
+		margin-top: -8%;
+
+		@media #{$large} { margin: 0 0 0 $symbol-5-left-margin-large; }
+		@media #{$large-up} and (min-height: 900px) { margin-left: $symbol-5-left-margin-large-high; }
 	}
 }
