Remove swipe hint (uncommented)

--- a/src/_scss/main.scss
+++ b/src/_scss/main.scss
@@ -2,7 +2,7 @@
 /*
     MAIN.CSS
 
-    - Last updated: ^^^^^^^^
+    - Last updated: 06.08.15
     - hello@liquidvisual.com
 */
 //-----------------------------------------------------------------
@@ -16,13 +16,8 @@
 //-----------------------------------------------------------------
 
 @import "liquidvisual/components/alerts";
-// @import "liquidvisual/components/breadcrumbs";
-// @import "liquidvisual/components/buttons";
-// @import "liquidvisual/components/hero";
 @import "liquidvisual/components/inline-list";
-// @import "liquidvisual/components/sections";
 @import "liquidvisual/components/toolbox";
-// @import "liquidvisual/components/topbar";
 
 //-----------------------------------------------------------------
 // Base
