--- a/src/_scss/app/components/_media-symbol.scss
+++ b/src/_scss/app/components/_media-symbol.scss
@@ -21,9 +21,9 @@
 	z-index: 1;
 }
 
-//=========================================
+//-----------------------------------------------------------------
 // Media Text
-//=========================================
+//-----------------------------------------------------------------
 
 .media-symbol-text {
 	position: relative;
@@ -36,10 +36,7 @@
 	}
 
 	.media-symbol-text-content {
-		@include transition('all');
 		@extend .lv-unselectable;
-
-		margin-top: 0;
 
 		@media #{$small-only} {
 		    margin-top: -30%;
@@ -50,6 +47,23 @@
 		    margin-bottom: 5%;
 		}
 	}
+
+	//=========================================
+	// Paragraphs and list items (links)
+	//=========================================
+
+	p, ul {
+		line-height: 1.2;
+		font-size: rem-calc(16);
+
+		@media (min-height: 900px) {
+			font-size: rem-calc(21);
+		}
+	}
+
+	//=========================================
+	// Positioning
+	//=========================================
 
 	// About
 	&.mid-left {
@@ -75,25 +89,15 @@
 		right: 0;
 	}
 
-	// Paragraphs and list items (links)
-	p, ul {
-		line-height: 1.2;
-		font-size: rem-calc(16);
-
-		@media (min-height: 900px) {
-			font-size: rem-calc(21);
-		}
-	}
-
 	-webkit-animation-duration: 0.6s;
 	-moz-animation-duration: 0.6s;
 	-o-animation-duration: 0.6s;
 	animation-duration: 0.6s;
 }
 
-//=========================================
+//-----------------------------------------------------------------
 // Media Symbol Close Button
-//=========================================
+//-----------------------------------------------------------------
 
 .media-symbol-close-btn {
 	@include transition(color);
@@ -110,9 +114,9 @@
 	}
 }
 
-//=========================================
+//-----------------------------------------------------------------
 // *** Special Case: Contact ***
-//=========================================
+//-----------------------------------------------------------------
 
 .mid-right {
 
@@ -139,9 +143,9 @@
 	color: black;
 }
 
-//=========================================
+//-----------------------------------------------------------------
 // Media Symbol Video
-//=========================================
+//-----------------------------------------------------------------
 
 .media-symbol video {
 	position: absolute;
@@ -175,9 +179,9 @@ video::-webkit-media-controls {
     display: none !important; // hacky
 }
 
-//=========================================
+//-----------------------------------------------------------------
 // Media Symbol Header
-//=========================================
+//-----------------------------------------------------------------
 
 .media-symbol .header {
 	position: absolute;
@@ -192,9 +196,9 @@ video::-webkit-media-controls {
 	padding: 0;
 }
 
-//=========================================
+//-----------------------------------------------------------------
 // Dark Tint Overlay
-//=========================================
+//-----------------------------------------------------------------
 
 .media-symbol {
 	.img {
