--- a/src/_layouts/master.html
+++ b/src/_layouts/master.html
@@ -34,7 +34,7 @@
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> -->
 </head>
 <body>
-    <div class="lv-super dev-mode-enabled">
+    <div class="lv-super dev-mode-enabledX">
         <div class="lv-scroller">
             <div class="lv-page">
 
@@ -60,13 +60,11 @@
 
     <!-- build:js(src) /assets/scripts/minified.js -->
     <script src="/_bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/_bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
     <script src="/_bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
     <script src="/_bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="/_bower_components/jquery.transit/jquery.transit.js"></script>
     <script src="/_bower_components/fastclick/lib/fastclick.js"></script>
     <script src="/_bower_components/foundation/js/foundation/foundation.js"></script>
-    <script src="/_bower_components/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
     <script src="/_bower_components/nprogress/nprogress.js"></script>
     <script src="/scripts/main.js"></script>
     <script src="/scripts/responsive-helper.js"></script>
@@ -75,6 +73,8 @@
     {% comment %}
     <!--
         ~~~ DEV REFERENCE ONLY ~~~
+
+        <script src="/_bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
 
         ** FOUNDATION 5 **
         <script src="/_bower_components/foundation/js/foundation/foundation.js"></script>
