Close cross update for firefox

--- a/src/_layouts/homepage.html
+++ b/src/_layouts/homepage.html
@@ -26,7 +26,7 @@ layout: master
 
 				<div class="media-symbol-text hide {{ item.text_position }}">
 					<div class="media-symbol-text-content">
-						<span class="media-symbol-close-btn js-media-symbol-close-btn show-for-large-up" href="#">✕</span>
+						<span class="media-symbol-close-btn js-media-symbol-close-btn show-for-large-up" href="#">&times;</span>
 						<div class="row">
 							{% for text in item.text %}
 								<div class="medium-6 columns">
