--- a/src/_scss/app/base/_variables.scss
+++ b/src/_scss/app/base/_variables.scss
@@ -25,31 +25,37 @@ $symbol-width: calc(100vh - 80px);  // match this in global - can't do calc with
 // Large Granular (width)  ** WARNING - ZEROES NEED PIXELS FOR CALC, WHO KNOWS WHY **
 //=========================================
 
-$symbol-1-left-margin-large: 128px; // set
+$symbol-1-left-margin-large: 56px; //128px; // set
 $symbol-2-left-margin-large: 67px;
 $symbol-3-left-margin-large: 0px;
 $symbol-4-left-margin-large: 0px; // problem one
 $symbol-5-left-margin-large: 0px;
+// RIGHT margin - only one
+$symbol-5-right-margin-large: 67px;
 
 //=========================================
 // Large High Granular (width && 670 high) - ipad landscape
 //=========================================
 
-$symbol-1-left-margin-large-high: 128px; // set
+$symbol-1-left-margin-large-high: (67px - 15px); // minus 15px for the logo padding (long story)
 $symbol-2-left-margin-large-high: 67px;
 $symbol-3-left-margin-large-high: 0px;
-$symbol-4-left-margin-large-high: -67px; // problem one
+$symbol-4-left-margin-large-high: -67px; // problem one -67px
 $symbol-5-left-margin-large-high: 0px;
+// RIGHT margin - only one
+$symbol-5-right-margin-large-high: (67px + 15px); // not sure why this works
 
 //=========================================
 // Large High Granular (width && 900 high)
 //=========================================
 
-$symbol-1-left-margin-large-highest: 128px; // set
+$symbol-1-left-margin-large-highest: 108px; // set
 $symbol-2-left-margin-large-highest: 116px;
 $symbol-3-left-margin-large-highest: 0px;
 $symbol-4-left-margin-large-highest: -116px; // problem one -116px
 $symbol-5-left-margin-large-highest: 0px;
+// RIGHT margin - only one
+$symbol-5-right-margin-large-highest: 116px;
 
 //=========================================
 // Logo
