--- a/src/_scss/app/layout/_header.scss
+++ b/src/_scss/app/layout/_header.scss
@@ -12,7 +12,7 @@
 //-----------------------------------------------------------------
 
 .global-header {
-	padding: rem-calc(60 0 60 20);
+	padding: rem-calc(60 0);
 	text-align: center;
 
 	@media #{$large-up} {
