--- a/src/_layouts/master.html
+++ b/src/_layouts/master.html
@@ -45,6 +45,11 @@
 
                 {{ content }}
 
+                <!-- FOOTER -->
+                <footer class="global-footer">
+                    <a href="#link-here" target="_blank">+ Privacy Policy</a>
+                </footer>
+
             </div> <!-- .lv-page -->
         </div> <!-- .lv-scroller -->
     </div> <!-- .lv-super -->
