--- a/src/_scss/app/base/_global.scss
+++ b/src/_scss/app/base/_global.scss
@@ -55,6 +55,7 @@ html, body {
 //-----------------------------------------------------------------
 
 .lv-page {
+    position: relative; // added 2017
     height: 100%;
     margin: 0 auto;
 
