--- a/src/_scss/main.scss
+++ b/src/_scss/main.scss
@@ -33,6 +33,7 @@
 
 @import "app/layout/header";
 @import "app/layout/media-container";
+@import "app/layout/footer";
 
 //=========================================
 // Components
